# bazel-run-reproducer

./: .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.bazel.md  README.md
.aspect/cli/: config.yaml
src/: BUILD  Demo.java
tools/: BUILD  tools.lock.json
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
